moved everything to cpp except low level system handler functions

--- a/L432KCU3_Blinky/CMakeLists.txt
+++ b/L432KCU3_Blinky/CMakeLists.txt
@@ -1,8 +1,12 @@
 target_sources(${BUILD_NAME} PRIVATE
-    Src/main.c
+    Src/main.cpp
+    Src/system_device.cpp
+    Src/low_level_handlers.c
     Src/syscalls.c
     Src/sysmem.c
+    Src/system_stm32l4xx.c
     Startup/startup_stm32l432kcux.s
+    
 )
 
 target_include_directories(${BUILD_NAME} PRIVATE
