Used vendor system_stm32l4xx.c

--- a/L432KCU3_Blinky/CMakeLists.txt
+++ b/L432KCU3_Blinky/CMakeLists.txt
@@ -5,8 +5,9 @@ target_sources(${BUILD_NAME} PRIVATE
     Src/low_level_handlers.c
     Src/syscalls.c
     Src/sysmem.c
-    Src/system_stm32l4xx.c
+    
     Startup/startup_stm32l432kcux.s
+    ${CMAKE_SOURCE_DIR}/STM32CubeL4/Drivers/CMSIS/Device/ST/STM32L4xx/Source/Templates/system_stm32l4xx.c
     
 )
 
